[tool.poetry]
name = "doodle-server"
version = "0.1.0"
description = ""
authors = ["anand2312 <40204976+anand2312@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "doodle_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {version = "^0.23.2", extras = ["fast"]}
passlib = {version = "^1.7.4", extras = ["argon2"]}
loguru = "^0.7.2"
prisma = "^0.11.0"
pydantic-settings = "^2.0.3"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
taskipy = "^1.12.0"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = [
    "N", # pep8-naming
    "UP", # pyupgrade
    "ANN", # annotations
    "ASYNC",
    "S", # bandit
    "B", # bugbear
    "A", # flake8-builtins
    "RUF", # ruff specific
]

[tool.taskipy.tasks]
lint = { cmd = "ruff .", help = "Lints project." }
format = { cmd = "ruff format .", help = "Runs Ruff autoformatter." }
server = { cmd = "uvicorn --reload doodle_server.app:app", help = "Runs the backend server." }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
