[tool.poetry]
name = "quill-server"
version = "0.1.0"
description = ""
authors = ["anand2312 <anand2312@proton.me>"]
readme = "README.md"
packages = [{include = "quill_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {version = "^0.23.2", extras = ["fast"]}
passlib = {version = "^1.7.4", extras = ["argon2"]}
loguru = "^0.7.2"
pydantic-settings = "^2.0.3"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
sqlalchemy = {version = "^2.0.23", extras = ["asyncio"]}
alembic = "^1.12.1"
asyncpg = "^0.29.0"
python-multipart = "^0.0.6"
redis = {version = "^5.0.1", extras = ["hiredis"]}
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
taskipy = "^1.12.0"
httpx = "^0.25.1"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["alembic"]
extend-ignore = [
    "ANN101",
]

[tool.ruff.lint]
extend-select = [
    "N", # pep8-naming
    "UP", # pyupgrade
    "ANN", # annotations
    "ASYNC",
    "B", # bugbear
    "A", # flake8-builtins
    "RUF", # ruff specific
]

[tool.taskipy.tasks]
lint = { cmd = "ruff .", help = "Lints project." }
format = { cmd = "ruff format .", help = "Runs Ruff autoformatter." }
server = { cmd = "uvicorn --reload doodle_server.app:app", help = "Runs the backend server." }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
